# masqlite

./: .gitignore  LICENSE  README.md  meson.build
.github/workflows/: meson.yml
include/: btree.h  storage_engine.h  vm.h
include/sql/: ast.h  keyword.h  lexer.h  parser.h
src/: btree.c  meson.build  storage_engine.c  vm.c
src/sql/: lexer.c  parser.c
test/: meson.build  test_btree.c  test_sql_lexer.c  test_sql_parser.c  test_storage_engine.c  test_vm.c
